add battle groups to race groups on parsing. remove errors with mass calculations for race

--- a/templates/report.html
+++ b/templates/report.html
@@ -95,7 +95,7 @@
 {% set li = (raceStats|length - 1) %}
 <table class="b">
     <tr class="tableHeader c">
-        <td colspan="6">Имя</td>
+        <td colspan="6">Расы</td>
     </tr>
     {% for r in raceStats %}
     {% if num % 6 == 0 %}
