gray out destroyed ships

--- a/templates/report.html
+++ b/templates/report.html
@@ -24,7 +24,7 @@
         {
             text-size: 5px;
         }
-        .g{color:#bababa;}
+        .g{color:#dadada;}
     </style>
     {% macro showMinorValue(value) -%}
     {% if (value) != 0 %}<span class="minorText">({{ '%0.2f' % (value) }})</span>{% endif %}
