show combatant mass in the report error counting ships of a specific type with battle on the planet where this type was produced in this turn

--- a/templates/report.html
+++ b/templates/report.html
@@ -181,6 +181,11 @@
         </td>
     </tr>
     <tr>
+        <td style="padding-left:50px;">
+            {{ '%0.2f' % r.totalSeenBattleMass }} - Не сбитая боевая масса, которую мы видели
+        </td>
+    </tr>
+    <tr>
         <td>
             Деталировка виденной массы:
         </td>
